"""
Notification router
Handles email, SMS, push notifications, and webhooks
"""
from fastapi import APIRouter, Depends, HTTPException, status
from models.notification import (
    SendEmailRequest, NotificationResponse,
    SendSMSRequest,
    SendPushRequest,
    WebhookRequest, WebhookResponse,
    PreferencesRequest, PreferencesResponse
)

router = APIRouter()


@router.post("/email", response_model=NotificationResponse)
async def send_email(request: SendEmailRequest):
    """
    Send email notification
    Max 3 retries: 1s, 5s, 30s
    """
    # TODO: Call gRPC NotificationService.SendEmail
    # TODO: Validate recipient email format
    # TODO: Check user preferences
    # TODO: Queue for delivery
    raise HTTPException(
        status_code=status.HTTP_501_NOT_IMPLEMENTED,
        detail="Not implemented yet"
    )


@router.post("/sms", response_model=NotificationResponse)
async def send_sms(request: SendSMSRequest):
    """
    Send SMS notification
    """
    # TODO: Validate phone number format
    # TODO: Check user preferences
    # TODO: Integrate with SMS provider (Twilio)
    raise HTTPException(
        status_code=status.HTTP_501_NOT_IMPLEMENTED,
        detail="Not implemented yet"
    )


@router.post("/push", response_model=NotificationResponse)
async def send_push(request: SendPushRequest):
    """
    Send push notification
    """
    # TODO: Validate device tokens exist
    # TODO: Send via FCM/APNs
    raise HTTPException(
        status_code=status.HTTP_501_NOT_IMPLEMENTED,
        detail="Not implemented yet"
    )


@router.post("/webhooks", response_model=WebhookResponse)
async def register_webhook(request: WebhookRequest):
    """
    Register webhook URL
    Validates URL (no private IPs, standard ports only)
    """
    # TODO: Validate webhook URL (SSRF protection)
    # TODO: Store in database
    # TODO: Send test webhook
    raise HTTPException(
        status_code=status.HTTP_501_NOT_IMPLEMENTED,
        detail="Not implemented yet"
    )


@router.get("/status/{notification_id}", response_model=NotificationResponse)
async def get_notification_status(notification_id: str):
    """
    Get notification delivery status
    """
    # TODO: Fetch from database
    # TODO: Validate tenant ownership
    raise HTTPException(
        status_code=status.HTTP_501_NOT_IMPLEMENTED,
        detail="Not implemented yet"
    )


@router.put("/preferences", response_model=PreferencesResponse)
async def update_preferences(request: PreferencesRequest):
    """
    Update user notification preferences
    """
    # TODO: Store in database
    # TODO: Validate preference keys
    raise HTTPException(
        status_code=status.HTTP_501_NOT_IMPLEMENTED,
        detail="Not implemented yet"
    )
